--- a/input/index.cshtml
+++ b/input/index.cshtml
@@ -22,11 +22,11 @@ ArchiveTitle: => GetString("Title")
                         @foreach (IDocument tag in Outputs.Get("tags.html").GetChildren().OrderByDescending(x => x.GetChildren().Count()).Take(10))
                         {
                             string postCount = tag.GetChildren().Count().ToString();
-                            <a href="@Context.GetLink(tag)" class="badge badge-light"> @tag.GetTitle() (@postCount)</a>
+                            <a href="@Context.GetLink(tag)" class="badge badge-light"><i class="fa fas fa-tag"></i> @tag.GetTitle() (@postCount)</a>
                         }
                         <div class="mt-3">
                             <div class="float-sm-right">
-                                <a class="btn btn-sm btn-primary" href="@Context.GetLink(Outputs.Get("tags.html"))" role="button">All Tags <i class="fas fa-angle-double-right"></i></a>
+                                <a class="btn btn-sm btn-primary" href="@Context.GetLink(Outputs.Get("tags.html"))" role="button"><i class="fa fas fa-tag"></i> All Tags <i class="fas fa-angle-double-right"></i></a>
                             </div>
                             <div class="clearfix"></div>
                         </div>
