--- a/input/tags.cshtml
+++ b/input/tags.cshtml
@@ -21,7 +21,7 @@ ArchiveTitle: => GetString("GroupKey")
                 {
                     string badgeStyle = Document.GetString(Keys.GroupKey).Equals(tag.GetTitle(), StringComparison.OrdinalIgnoreCase) ? "badge-dark" : "badge-light";
                     string postCount = tag.GetChildren().Count().ToString();
-                    <a href="@Context.GetLink(tag)" class="badge @badgeStyle"> @tag.GetTitle() (@postCount)</a>
+                    <a href="@Context.GetLink(tag)" class="badge @badgeStyle"><i class="fa fas fa-tags"></i> @tag.GetTitle() (@postCount)</a>
                 }
             </div>
         </div>
@@ -32,6 +32,6 @@ else
     @foreach (IDocument tag in Document.GetChildren().OrderByDescending(x => x.GetChildren().Count()))
     {
         string postCount = tag.GetChildren().Count().ToString();
-        <a role="button" href="@Context.GetLink(tag)" class="badge badge-light"> @tag.GetTitle() (@postCount)</a>
+        <a role="button" href="@Context.GetLink(tag)" class="badge badge-light"><i class="fa fas fa-tags"></i> @tag.GetTitle() (@postCount)</a>
     }
 }
